--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://agenda.unice.cf">Agenda</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://absences.unice.cf">Absences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://notes.unice.cf">Notes</a></li>
                 </ul>
             </div>
 <div class="form-check form-switch ms-auto mt-3 me-3">
@@ -58,13 +59,14 @@
                 <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
                     <div class="text-center">
                         <p class="fw-bold text-success mb-2">UniceApps</p>
-                        <h1 class="fw-bold">Des applis. Pour vous.</h1>
+                        <h1 class="fw-bold">Des applications. Pour vous.</h1>
                     </div>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
-                    <div class="position-relative" style="display: flex;flex-wrap: wrap;justify-content: flex-end;height: 915px;">
-                        <div style="position: relative;flex: 0 0 45%;transform: translate3d(-15%, 35%, 0);"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.8" src="assets/img/products/IMG_0109.png"></div>
-                        <div style="position: relative;flex: 0 0 45%;transform: translate3d(-5%, 20%, 0);"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.4" src="assets/img/products/IMG_0110.jpeg"></div>
+                    <div class="position-relative" style="display: flex;flex-wrap: wrap;justify-content: flex-end;height: 800px;">
+                        <div style="position: relative;flex: 0 0 45%;transform: translate3d(0%, 20%, 0);"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.8" src="assets/img/products/agenda.png" width="70%"></div>
+                        <div style="position: relative;flex: 0 0 45%;transform: translate3d(-5%, 10%, 0);"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.6" src="assets/img/products/notes.jpeg" width="70%"></div>
+                        <div style="position: relative;flex: 0 0 45%;transform: translate3d(-50%, -40%, 0);"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.4" src="assets/img/products/absences.jpeg" width="70%"></div>
                     </div>
                 </div>
             </div>
@@ -94,7 +96,7 @@
                         <div class="card bg-info-light">
                             <div class="card-body text-center px-4 py-5 px-md-5">
                                 <p class="fw-bold text-info card-text mb-2">UniceNotes</p>
-                                <h5 class="fw-bold card-title mb-3">Connaître ses notes sans télécharger un PDF.</h5><button class="btn btn-info btn-sm disabled" type="button" disabled="">Bientôt</button>
+                                <h5 class="fw-bold card-title mb-3">Connaître ses notes sans télécharger un PDF.</h5><a class="btn btn-info btn-sm" role="button" href="https://notes.unice.cf">Télécharger</a>
                             </div>
                         </div>
                     </div>
@@ -111,6 +113,7 @@
                         <li><a href="https://unice.cf">UniceApps</a></li>
                         <li><a href="https://agenda.unice.cf">UniceAgenda</a></li>
                         <li><a href="https://absences.unice.cf">UniceAbsences</a></li>
+                        <li><a href="https://notes.unice.cf">UniceNotes</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -126,12 +129,12 @@
                                 <path d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z"></path>
                                 <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
                             </svg></span><span>UniceApps</span></div>
-                    <p class="text-muted">Des applications pour vous aider. Sites non liés à l'Université Côte d'Azur.</p>
+                    <p class="text-muted">Des applications. pour vous. Sites non liés à l'Université Côte d'Azur.</p>
                 </div>
             </div>
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2023 MetrixMedia</p>
+                <p class="mb-0">Copyright © <script type="text/javascript">document.write(new Date().getFullYear())</script> MetrixMedia / hugofnm</p>
             </div>
         </div>
     </footer>
